--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <script src="js/angular-1.2.22.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/socketFactory.js"></script>
   <script src="js/indexController.js"></script>
-  <script src="js/indholdskanalen.js"></script>
 </body>
 </html>
