--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<html>
-<head data-ng-app="ikApp" data-ng-controller="indexController">
+<html data-ng-app="ikApp">
+<head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Indholdskanalen</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
+<body data-ng-controller="IndexController">
+  <div data-ng-show="step === 'not-activated'">
+    <h1>Screen activation</h1>
+    <form data-ng-submit="submitActivationCode()">
+      <input data-ng-model="activationCode" type="text" placeholder="Activation code" required autofocus>
+      <button type="submit">Activate</button>
+    </form>
+  </div>
+
+  <script src="js/config.js"></script>
   <script src="js/angular-1.2.22.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/socketFactory.js"></script>
