--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="http://service.indholdskanalen.vm/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
+
   <title>Indholdskanalen</title>
 
   <script src="js/config.js"></script>
   <script src="js/angular-1.2.22.min.js"></script>
+  <script src="js/angular-animate-1.2.22.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/slideDirective.js"></script>
   <script src="js/socketFactory.js"></script>
   <script src="js/indexController.js"></script>
 </head>
@@ -33,8 +39,8 @@
   </div>
 
   <div data-ng-show="step == 'show-content'">
-    <div data-ng-repeat="slide in slides" data-ng-show="currentIndex == $index">
-      <img data-ng-src="http://service.indholdskanalen.vm/{{slide.options.image}}">
+    <div data-ng-repeat="slide in slides" data-ng-show="currentIndex == $index" class="slide">
+      <ik-slide ik-index="{{$index}}"></ik-slide>
     </div>
   </div>
 </body>
