Issue #8410 by tuj: Fixed loading of stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="//service.indholdskanalen.vm/css/styles.css">
   <link rel="stylesheet" href="/css/styles.css">
 
   <title>Indholdskanalen</title>
@@ -12,6 +11,7 @@
   <!-- Load angular -->
   <script src="js/lib/angular-1.2.22.min.js"></script>
   <script src="js/lib/angular-animate-1.2.22.min.js"></script>
+  <script src="js/lib/angular-css-injector.min.js"></script>
 
   <!-- Load configuration -->
   <script src="js/config.js"></script>
@@ -23,7 +23,6 @@
   <script src="js/directives/slideDirective.js"></script>
   <script src="js/factories/socketFactory.js"></script>
   <script src="js/controllers/indexController.js"></script>
-
 </head>
 <body data-ng-controller="IndexController">
 
