Issue #8568 by cableman: Added polyfill to fix video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <title>Indholdskanalen</title>
 
+  <script src="js/lib/jquery-1.11.1.min.js"></script>
+  <script src="js/lib/mediaelement-and-player.min.js"></script>
+  <link rel="stylesheet" href="/css/mediaelementplayer.css">
+
+
   <!-- Load angular -->
   <script src="js/lib/angular-1.2.22.min.js"></script>
   <script src="js/lib/angular-animate-1.2.22.min.js"></script>
