Issue #8634 by cableman: Added video js to the mix

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/video-js.min.css">
 
   <title>Indholdskanalen</title>
 
+  <!-- Libraries -->
   <script src="js/lib/jquery-1.11.1.min.js"></script>
-  <script src="js/lib/mediaelement-and-player.min.js"></script>
-  <link rel="stylesheet" href="/css/mediaelementplayer.css">
-
+  <script src="js/lib/video.js"></script>
 
   <!-- Load angular -->
   <script src="js/lib/angular-1.2.22.min.js"></script>
