--- a/ik-templates/only-video/only-video.html
+++ b/ik-templates/only-video/only-video.html
@@ -1,5 +1,5 @@
 <div class="only-video">
-  <video class="only-video--video-player" id="videoPlayer" preload="none">
+  <video id="videoPlayer" class="only-video--video-player" preload="none">
     <source data-ng-src="{{ikSlide.currentVideo.mp4}}" type="video/mp4">
     <source data-ng-src="{{ikSlide.currentVideo.ogg}}" type="video/ogg">
   </video>
