--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/video-js.min.css">
+  <link rel="stylesheet" href="/css/video-js.css">
 
   <title>Indholdskanalen</title>
 
