--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="js/directives/slideDirective.js"></script>
   <script src="js/factories/socketFactory.js"></script>
   <script src="js/controllers/indexController.js"></script>
+  <script src="js/controllers/notActivatedController.js"></script>
 </head>
 <body data-ng-controller="IndexController">
   <div data-ng-include="" src="'/partials/' + step + '.html'"></div>
