Issue #8721 by tuj: Added dynamic load of template css.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Load angular -->
   <script src="js/lib/angular-1.2.22.min.js"></script>
   <script src="js/lib/angular-animate-1.2.22.min.js"></script>
-  <script src="js/lib/angular-css-injector.min.js"></script>
+  <script src="js/lib/angular-css-injector.js"></script>
 
   <!-- Load configuration -->
   <script src="js/config.js"></script>
