Issue #8633 by tuj: Added filter function to client.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <script src="js/factories/socketFactory.js"></script>
   <script src="js/controllers/indexController.js"></script>
   <script src="js/controllers/notActivatedController.js"></script>
+
+  <script src="js/filters/activeEvents.js"></script>
 </head>
 <body data-ng-controller="IndexController">
   <div data-ng-include="" src="'/partials/' + step + '.html'"></div>
