--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- Load configuration -->
     <script src="app/config.js"></script>
 
+    <script src="app/shared/debug/debug.js"></script>
+
     <!-- Load the main app -->
     <script src="app/app.js"></script>
 
