--- a/app/pages/index/screen.html
+++ b/app/pages/index/screen.html
@@ -1,19 +1,19 @@
 <div>
   <div style="width: 50%; height: 50%; margin: 0; padding: 0; background-color: blue; position: relative; display: inline-block; float: left;">
-    <region region="1"></region>
+    <region region="1" show-progress="false"></region>
   </div>
   <div style="width: 50%; height: 50%; margin: 0; padding: 0; background-color: green; position: relative; display: inline-block; float: left;">
-    <region region="2"></region>
+    <region region="2" show-progress="true"></region>
   </div>
 </div>
 <div>
   <div style="width: 33%; height: 50%; margin: 0; padding: 0; background-color: red; position: relative; display: inline-block; float: left;">
-    <region region="3"></region>
+    <region region="3" show-progress="false"></region>
   </div>
   <div style="width: 34%; height: 50%; margin: 0; padding: 0; background-color: yellow; position: relative; display: inline-block; float: left;">
-    <region region="4"></region>
+    <region region="4" show-progress="true"></region>
   </div>
   <div style="width: 33%; height: 50%; margin: 0; padding: 0; background-color: purple; position: relative; display: inline-block; float: left;">
-    <region region="5"></region>
+    <region region="5" show-progress="false"></region>
   </div>
 </div>
