Issue #KOBAONE-103 by tuj: Fixed client documentation.

--- a/index.html
+++ b/index.html
@@ -9,33 +9,23 @@
 
     <title>Indholdskanalen Client</title>
 
-    <!-- Libraries -->
+    <!-- Load angular and external libraries-->
     <script src="assets/lib/jquery-1.11.1.min.js"></script>
     <script src="assets/lib/video.js"></script>
     <script src="assets/lib/offline.min.js"></script>
-
-    <!-- Load angular -->
     <script src="assets/lib/angular-1.2.22.min.js"></script>
     <script src="assets/lib/angular-animate-1.2.22.min.js"></script>
     <script src="assets/lib/angular-css-injector.js"></script>
 
-    <!-- Load configuration -->
+    <!-- Load the app -->
     <script src="app/config.js"></script>
-
-    <script src="app/shared/debug/debug.js"></script>
-
-    <!-- Load the main app -->
     <script src="app/app.js"></script>
-
-    <!-- Load custom extension -->
+    <script src="app/shared/debug/debug.js"></script>
     <script src="app/shared/slide/slide.js"></script>
     <script src="app/shared/socket/socket.js"></script>
     <script src="app/pages/index/indexController.js"></script>
     <script src="app/pages/notActivated/notActivatedController.js"></script>
-
     <script src="app/shared/region/region.js"></script>
-
-    <!-- Filters -->
     <script src="app/shared/filters/activeEvents.js"></script>
   </head>
   <body data-ng-controller="IndexController">
