Isseu KOBA-199 by cableman: Added sentry to the client

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <title>Indholdskanalen Client</title>
 
+    <!-- load sentry/raven -->
+    <script src="//cdn.ravenjs.com/1.1.15/jquery,native/raven.min.js"></script>
+
     <!-- Load angular and external libraries-->
     <script src="assets/lib/jquery-1.11.1.min.js"></script>
     <script src="assets/lib/video.js"></script>
