--- a/app/shared/region/region.html
+++ b/app/shared/region/region.html
@@ -1,14 +1,14 @@
 <div data-ng-show="displayIndex === 0" class="slide-block">
   <div data-ng-repeat="channelKey in channelKeys[0]">
     <div data-ng-repeat="slide in channels[0][channelKey]" data-ng-show="channelIndex === channelKey && slideIndex === $index && displayIndex === 0" class="slide">
-      <slide ik-slide="slide" scale="scale" region="regionId" array-id="0" channel-id="channelKey" index="$index" show="channelIndex === channelKey && slideIndex === $index && displayIndex === 0"></slide>
+      <slide ik-slide="slide" scale="scale" region-id="regionId" array-id="0" channel-id="channelKey" index="$index" show="channelIndex === channelKey && slideIndex === $index && displayIndex === 0"></slide>
     </div>
   </div>
 </div>
 <div data-ng-show="displayIndex === 1" class="slide-block">
   <div data-ng-repeat="channelKey in channelKeys[1]">
     <div data-ng-repeat="slide in channels[1][channelKey]" data-ng-show="channelIndex === channelKey && slideIndex === $index && displayIndex === 1" class="slide">
-      <slide ik-slide="slide" scale="scale" region="regionId" array-id="1" channel-id="channelKey" index="$index" show="channelIndex === channelKey && slideIndex === $index && displayIndex === 1"></slide>
+      <slide ik-slide="slide" scale="scale" region-id="regionId" array-id="1" channel-id="channelKey" index="$index" show="channelIndex === channelKey && slideIndex === $index && displayIndex === 1"></slide>
     </div>
   </div>
 </div>
