Issue #KOBAONE-217 by tuj: Changed from debug to itkLog.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
     <script src="assets/lib/angular-animate-1.2.22.min.js"></script>
     <script src="assets/lib/angular-css-injector.js"></script>
     <script src="assets/lib/locale_da.js"></script>
+    <script src="assets/lib/stacktrace.min.js"></script>
+
+    <!-- Modules -->
+    <script src="assets/modules/itkLog/itkLog.js"></script>
 
     <!-- Load the app -->
     <script src="app/config.js"></script>
     <script src="app/app.js"></script>
     <script src="app/shared/components/date/dateComponent.js"></script>
-    <script src="app/shared/debug/debug.js"></script>
     <script src="app/shared/slide/slide.js"></script>
     <script src="app/shared/socket/socket.js"></script>
     <script src="app/pages/index/indexController.js"></script>
