Issue #KOBAONE-226 by tuj: Added itk-log to not-activated page.

--- a/app/pages/notActivated/not-activated.html
+++ b/app/pages/notActivated/not-activated.html
@@ -1,3 +1,4 @@
+<itk-log></itk-log>
 <section data-ng-controller="NotActivatedController">
   <h1>Screen activation</h1>
   <form data-ng-submit="submitActivationCode()">
