--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Load angular and external libraries-->
     <script src="assets/lib/jquery-1.11.1.min.js"></script>
-    <script src="assets/lib/video.dev.js"></script>
+    <script src="assets/lib/video.dev.4.12.5.js"></script>
     <script src="assets/lib/offline.min.js"></script>
     <script src="assets/lib/angular-1.2.22.min.js"></script>
     <script src="assets/lib/angular-animate-1.2.22.min.js"></script>
