--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="app/config.js"></script>
     <script src="app/app.js"></script>
     <script src="app/shared/components/date/dateComponent.js"></script>
+    <script src="app/shared/components/keypress/keypress.js"></script>
     <script src="app/shared/slide/slide.js"></script>
     <script src="app/shared/socket/socket.js"></script>
     <script src="app/pages/index/indexController.js"></script>
@@ -33,7 +34,7 @@
     <script src="app/shared/region/region.js"></script>
     <script src="app/shared/filters/activeEvents.js"></script>
   </head>
-  <body data-ng-controller="IndexController">
+  <body data-ng-controller="IndexController" data-itk-keypress="logout()" data-key="76" data-modifier="17">
     <div data-ng-include="template"></div>
   </body>
 </html>
