Issue #DOKKWAY-74 by tuj: Added versioning to files. Remove unused css file.

--- a/index.html
+++ b/index.html
@@ -4,37 +4,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="assets/css/video-js.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css?dev">
 
     <title>Indholdskanalen Client</title>
 
     <!-- Load angular and external libraries-->
     <script src="assets/lib/jquery-1.11.1.min.js"></script>
-    <script src="assets/lib/offline.min.js"></script>
     <script src="assets/lib/angular-1.2.22.min.js"></script>
     <script src="assets/lib/angular-animate-1.2.22.min.js"></script>
-    <script src="assets/lib/angular-css-injector.js"></script>
-    <script src="assets/lib/locale_da.js"></script>
-    <script src="assets/lib/stacktrace.min.js"></script>
+    <script src="assets/lib/locale_da.js?dev"></script>
+    <script src="assets/lib/offline-0.7.11.min.js"></script>
+    <script src="assets/lib/angular-css-injector-1.0.4.js"></script>
+    <script src="assets/lib/stacktrace-0.6.4.min.js"></script>
 
     <!-- Modules -->
-    <script src="assets/modules/itkLog/itkLog.js"></script>
+    <script src="assets/modules/itkLog/itkLog.js?dev"></script>
 
     <!-- Components -->
-    <script src="app/shared/components/date/dateComponent.js"></script>
-    <script src="app/shared/components/digital-clock/digitalClockComponent.js"></script>
-    <script src="app/shared/components/keypress/keypress.js"></script>
+    <script src="app/shared/components/date/dateComponent.js?dev"></script>
+    <script src="app/shared/components/digital-clock/digitalClockComponent.js?dev"></script>
+    <script src="app/shared/components/keypress/keypress.js?dev"></script>
 
     <!-- Load the app -->
-    <script src="app/config.js"></script>
-    <script src="app/app.js"></script>
-    <script src="app/shared/slide/slide.js"></script>
-    <script src="app/shared/socket/socket.js"></script>
-    <script src="app/pages/index/indexController.js"></script>
-    <script src="app/pages/notActivated/notActivatedController.js"></script>
-    <script src="app/shared/region/region.js"></script>
-    <script src="app/shared/filters/activeEvents.js"></script>
+    <script src="app/config.js?dev"></script>
+    <script src="app/app.js?dev"></script>
+    <script src="app/shared/slide/slide.js?dev"></script>
+    <script src="app/shared/socket/socket.js?dev"></script>
+    <script src="app/pages/index/indexController.js?dev"></script>
+    <script src="app/pages/notActivated/notActivatedController.js?dev"></script>
+    <script src="app/shared/region/region.js?dev"></script>
+    <script src="app/shared/filters/activeEvents.js?dev"></script>
   </head>
   <body data-ng-controller="IndexController" data-itk-keypress="logout()" data-key="76" data-modifier="17">
     <div data-ng-include="template"></div>
