--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="assets/lib/stacktrace.min.js"></script>
 
     <!-- Modules -->
+    <script src="assets/modules/itkLog/itkLogConfig.js"></script>
     <script src="assets/modules/itkLog/itkLog.js"></script>
 
     <!-- Components -->
