Issue #DOKKWAY-74 by tuj: Changed order of script loading, moved config to start.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
     <title>Indholdskanalen Client</title>
 
+    <!-- Load configuration -->
+    <script src="app/config.js"></script>
+
     <!-- Load angular and external libraries-->
     <script src="assets/lib/jquery-1.11.1.min.js"></script>
     <script src="assets/lib/offline.min.js"></script>
@@ -27,7 +30,6 @@
     <script src="app/shared/components/keypress/keypress.js"></script>
 
     <!-- Load the app -->
-    <script src="app/config.js"></script>
     <script src="app/app.js"></script>
     <script src="app/shared/slide/slide.js"></script>
     <script src="app/shared/socket/socket.js"></script>
