Issue #AR-172 by tuj: Fixed issues where fallback image blocked the activation screen. Added . to xhr requests when reporting errors in activation process

--- a/app/pages/notActivated/not-activated.html
+++ b/app/pages/notActivated/not-activated.html
@@ -1,5 +1,5 @@
-<itk-log></itk-log>
-<section data-ng-controller="NotActivatedController">
+<section class="not-activated" data-ng-controller="NotActivatedController">
+  <itk-log></itk-log>
   <h1>Screen activation</h1>
   <form data-ng-submit="submitActivationCode()">
     <input data-ng-model="activationCode" type="text" placeholder="Activation code" required autofocus>
