Issue #AR-173 by tuj: Changed page title to Aroskanalen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="assets/css/styles.css?2708201501">
 
-    <title>Indholdskanalen Client</title>
+    <title>Aroskanalen</title>
 
     <!-- Load configuration -->
     <script src="app/config.js?2708201501"></script>
