--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- Load the app -->
     <script src="app/app.js?2708201501"></script>
     <script src="app/shared/slide/slide.js?2708201501"></script>
+    <script src="app/shared/slide/nullSlide.js?1809201501"></script>
     <script src="app/shared/socket/socket.js?0709201501"></script>
     <script src="app/pages/index/indexController.js?0709201501"></script>
     <script src="app/pages/notActivated/notActivatedController.js?2708201501"></script>
