Issue #TEAMMANAGE-180 by tuj: Upgrade to angular 1.4.6

--- a/index.html
+++ b/index.html
@@ -9,30 +9,8 @@
     <title>Aroskanalen</title>
 
     <script src="app/config.js"></script>
-    <script src="assets/build/assets.min.js"></script>
-    <script src="assets/build/app.min.js"></script>
-    <!--
-    <script src="assets/lib/jquery-1.11.1.min.js"></script>
-    <script src="assets/lib/angular-1.2.22.min.js"></script>
-    <script src="assets/lib/angular-animate-1.2.22.min.js"></script>
-    <script src="assets/lib/offline-0.7.11.min.js"></script>
-    <script src="assets/lib/angular-css-injector-1.0.4.js"></script>
-    <script src="assets/lib/stacktrace-0.6.4.min.js"></script>
-    <script src="assets/lib/locale_da.js?2708201501"></script>
-    <script src="assets/modules/itkLog/itkLog.js?2708201501"></script>
-    <script src="app/shared/components/date/dateComponent.js?2708201501"></script>
-    <script src="app/shared/components/digital-clock/digitalClockComponent.js?2708201501"></script>
-    <script src="app/shared/components/keypress/keypress.js?2708201501"></script>
-    <script src="app/app.js?2708201501"></script>
-    <script src="app/shared/slide/slide.js?2708201501"></script>
-    <script src="app/shared/slide/nullSlide.js?1809201501"></script>
-    <script src="app/shared/socket/socket.js?0709201501"></script>
-    <script src="app/pages/index/indexController.js?0709201501"></script>
-    <script src="app/pages/notActivated/notActivatedController.js?2708201501"></script>
-    <script src="app/shared/region/region.js?0709201501"></script>
-    <script src="app/shared/filters/activeEvents.js?2708201501"></script>
-
-    -->
+    <script src="assets/build/assets.min.js?2109201501"></script>
+    <script src="assets/build/app.min.js?2109201501"></script>
   </head>
   <body data-ng-controller="IndexController" data-itk-keypress="logout()" data-key="73" data-modifier="17">
     <div class="fallback-image" data-ng-show="displayFallbackImage" data-ng-style="{'background-image': 'url(' + fallbackImageUrl + ')'}"></div>
