--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="assets/css/styles.css?1612201501">
 
-    <title>Aroskanalen</title>
+    <title>OS2Display</title>
 
     <script src="app/config.js"></script>
     <script src="assets/build/assets.min.js?1612201501"></script>
